--- a/MainCodes/.env
+++ b/MainCodes/.env
@@ -1,2 +1,6 @@
-DATABASEKEY = *@VEntures44
+DATABASEKEY = JOSUE@le1SAGE
+DB_HOST=mysql-27963-0.cloudclusters.net
+DB_USER=Developpers
+DB=Onlex
+DB_PORT=27963
 SECRETKEY = :zotcEQX64Ilk9PUc=MMyUh3yvqylpYKHw.W5|_tug['7YJ&+hd']g"QM[tw@~*
